<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selpro">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="409dp"
        android:layout_height="83dp"
        android:layout_marginTop="24dp"
        android:text="Seleccionar particula proyectil"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bprone"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/neutron"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        android:textColorLink="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpropa"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:text="@string/n"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/bprone"
        app:layout_constraintEnd_toEndOf="@+id/bprone"
        app:layout_constraintTop_toTopOf="@+id/bprone" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="@+id/bprone" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bprone"
        app:layout_constraintEnd_toStartOf="@+id/textView37" />

    <Button
        android:id="@+id/bpropa"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/part_alfa"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        android:textColorLink="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bprotr"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/a"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/bpropa"
        app:layout_constraintEnd_toEndOf="@+id/bpropa"
        app:layout_constraintTop_toTopOf="@+id/bpropa"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bprone"
        app:layout_constraintEnd_toStartOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="@+id/bpropa"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bpropa"
        app:layout_constraintEnd_toStartOf="@+id/textView33" />

    <Button
        android:id="@+id/bprotr"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/tritio"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        android:textColorLink="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bprode"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/r"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/bprotr"
        app:layout_constraintEnd_toEndOf="@+id/bprotr"
        app:layout_constraintTop_toTopOf="@+id/bprotr" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/bprotr" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bprotr"
        app:layout_constraintEnd_toStartOf="@+id/textView29" />

    <Button
        android:id="@+id/bprode"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/deuteron"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        android:textColorLink="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpropr"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/bprode" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bprode"
        app:layout_constraintEnd_toStartOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/d"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/bprode"
        app:layout_constraintEnd_toEndOf="@+id/bprode"
        app:layout_constraintTop_toTopOf="@+id/bprode"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/bpropr"
        style="@style/Widget.Material3.Button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/proton"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        android:textColorLink="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/p"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/bpropr"
        app:layout_constraintEnd_toEndOf="@+id/bpropr"
        app:layout_constraintTop_toTopOf="@+id/bpropr"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/bpropr" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bpropr"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>