<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resultado">

    <TextView
        android:id="@+id/txtznuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimnuc"
        app:layout_constraintTop_toBottomOf="@+id/txtanuc" />

    <TextView
        android:id="@+id/txtapart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimbpart"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtzpartre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimbpart"
        app:layout_constraintTop_toBottomOf="@+id/txtapart" />

    <TextView
        android:id="@+id/txtanuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimnuc"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtzproy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimbproy"
        app:layout_constraintTop_toBottomOf="@+id/txtaproy" />

    <TextView
        android:id="@+id/txtaproy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimbproy"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtzblan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimblan"
        app:layout_constraintTop_toBottomOf="@+id/txtablan" />

    <TextView
        android:id="@+id/txtablan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtsimblan"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/coma"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/txtsimbproy"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/parentder"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/txtsimbpart"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:text="@string/parentizq"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/txtsimblan"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtsimbproy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/n"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtsimbpart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/n"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtsimnuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/n"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/azul" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/roja" />

    <TextView
        android:id="@+id/txtsimblan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="80dp"
        android:text="@string/n"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="228dp"
        android:layout_marginTop="252dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texttiporeac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de reaccion"
            android:textColor="#3F51B5"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textenelib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Energia liberada"
            android:textColor="#3F51B5"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/texteneama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Energia de amarre"
            android:textColor="#3F51B5"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textnuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nucleo obtenido"
            android:textColor="#3F51B5"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textmasnuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Masa del nucleo"
            android:textColor="#3F51B5"
            android:textSize="34sp" />
    </LinearLayout>

    <Button
        android:id="@+id/butinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Inicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>